--- a/.travis.yml
+++ b/.travis.yml
@@ -81,3 +81,4 @@ script:
   - if [ "$COVERITY_SCAN_BRANCH" != 1 ]; then echo -n travis_fold:end:script.make_install; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = no ]; then tests/findalldevstest; fi
   - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = yes ]; then run/findalldevstest; fi
+  - if [ "$COVERITY_SCAN_BRANCH" != 1 -a "$CMAKE" = no ]; then make releasetar; fi
