Clarify what --enable-packet-ring does.
It doesn't enable Linux packet ring support on any platform on which
it's used, it enables packet ring support *on Linux*, and doesn't do
anything on non-Linux platforms.

--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -319,7 +319,7 @@
 /* target host supports netmap */
 #cmakedefine PCAP_SUPPORT_NETMAP 1
 
-/* use Linux packet ring capture if available */
+/* use packet ring capture support on Linux if available */
 #cmakedefine PCAP_SUPPORT_PACKET_RING 1
 
 /* target host supports RDMA sniffing */
