--- a/config.h.in
+++ b/config.h.in
@@ -316,7 +316,7 @@
 /* target host supports netmap */
 #undef PCAP_SUPPORT_NETMAP
 
-/* use Linux packet ring capture if available */
+/* use packet ring capture support on Linux if available */
 #undef PCAP_SUPPORT_PACKET_RING
 
 /* target host supports RDMA sniffing */
