--- a/configure.ac
+++ b/configure.ac
@@ -127,6 +127,133 @@ fi
 AC_LBL_LIBRARY_NET
 
 #
+# Check for reentrant versions of getnetbyname_r(), as provided by
+# Linux (glibc), Solaris/IRIX, and AIX (with three different APIs!).
+# If we don't find one, we just use getnetbyname(), which uses
+# thread-specific data on many platforms, but doesn't use it on
+# NetBSD or OpenBSD, and may not use it on older versions of other
+# platforms.
+#
+AC_MSG_CHECKING([for the Linux getnetbyname_r()])
+AC_TRY_LINK(
+    [#include <netdb.h>],
+    [
+	struct netent netent_buf;
+	char buf[1024];
+	struct netent *resultp;
+	int h_errnoval;
+
+	return getnetbyname_r((const char *)0, &netent_buf, buf, sizeof buf, &resultp, &h_errnoval);
+    ],
+    [
+	AC_MSG_RESULT(yes)
+	AC_DEFINE(HAVE_LINUX_GETNETBYNAME_R, 1,
+	    [define if we have the Linux getnetbyname_r()])
+    ],
+    [
+	AC_MSG_RESULT(no)
+
+	AC_MSG_CHECKING([for Solaris/IRIX getnetbyname_r()])
+	AC_TRY_LINK(
+	    [#include <netdb.h>],
+	    [
+		struct netent netent_buf;
+		char buf[1024];
+
+		return getnetbyname_r((const char *)0, &netent_buf, buf, (int)sizeof buf) != NULL;
+	    ],
+	    [
+		AC_MSG_RESULT(yes)
+		AC_DEFINE(HAVE_SOLARIS_IRIX_GETNETBYNAME_R, 1,
+		    [define if we have the Solaris/IRIX getnetbyname_r()])
+	    ],
+	    [
+		AC_MSG_RESULT(no)
+
+		AC_MSG_CHECKING([for AIX getnetbyname_r()])
+		AC_TRY_LINK(
+		    [#include <netdb.h>],
+		    [
+			struct netent netent_buf;
+			struct netent_data net_data;
+
+			return getnetbyname_r((const char *)0, &netent_buf, &net_data);
+		    ],
+		    [
+			AC_MSG_RESULT(yes)
+			AC_DEFINE(HAVE_AIX_GETNETBYNAME_R, 1,
+			    [define if we have the AIX getnetbyname_r()])
+		    ],
+		    [
+			AC_MSG_RESULT(no)
+		    ])
+	    ])
+    ])
+
+#
+# Check for reentrant versions of getprotobyname_r(), as provided by
+# Linux (glibc), Solaris/IRIX, and AIX (with three different APIs!).
+# If we don't find one, we just use getprotobyname(), which uses
+# thread-specific data on many platforms, but doesn't use it on
+# NetBSD or OpenBSD, and may not use it on older versions of other
+# platforms.
+#
+AC_MSG_CHECKING([for the Linux getprotobyname_r()])
+AC_TRY_LINK(
+    [#include <netdb.h>],
+    [
+	struct protoent protoent_buf;
+	char buf[1024];
+	struct protoent *resultp;
+
+	return getprotobyname_r((const char *)0, &protoent_buf, buf, sizeof buf, &resultp);
+    ],
+    [
+	AC_MSG_RESULT(yes)
+	AC_DEFINE(HAVE_LINUX_GETPROTOBYNAME_R, 1,
+	    [define if we have the Linux getprotobyname_r()])
+    ],
+    [
+	AC_MSG_RESULT(no)
+
+	AC_MSG_CHECKING([for Solaris/IRIX getprotobyname_r()])
+	AC_TRY_LINK(
+	    [#include <netdb.h>],
+	    [
+		struct protoent protoent_buf;
+		char buf[1024];
+
+		return getprotobyname_r((const char *)0, &protoent_buf, buf, (int)sizeof buf) != NULL;
+	    ],
+	    [
+		AC_MSG_RESULT(yes)
+		AC_DEFINE(HAVE_SOLARIS_IRIX_GETPROTOBYNAME_R, 1,
+		    [define if we have the Solaris/IRIX getprotobyname_r()])
+	    ],
+	    [
+		AC_MSG_RESULT(no)
+
+		AC_MSG_CHECKING([for AIX getprotobyname_r()])
+		AC_TRY_LINK(
+		    [#include <netdb.h>],
+		    [
+			struct protoent protoent_buf;
+			struct protoent_data proto_data;
+
+			return getprotobyname_r((const char *)0, &protoent_buf, &proto_data);
+		    ],
+		    [
+			AC_MSG_RESULT(yes)
+			AC_DEFINE(HAVE_AIX_GETPROTOBYNAME_R, 1,
+			    [define if we have the AIX getprotobyname_r()])
+		    ],
+		    [
+			AC_MSG_RESULT(no)
+		    ])
+	    ])
+    ])
+
+#
 # You are in a twisty little maze of UN*Xes, all different.
 # Some might not have ether_hostton().
 # Some might have it and declare it in <net/ethernet.h>.
